// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "12345/api/pbentity";

import "google/protobuf/timestamp.proto";

message Account {
    string                    Id         = 1   ; //   
    string                    GroupId    = 2   ; //   
    string                    OrgId      = 3   ; //   
    string                    Uid        = 4   ; //   
    string                    Status     = 5   ; //   
    int64                     Balance    = 6   ; //   
    int64                     Cost       = 7   ; //   
    int64                     CostTokens = 8   ; //   
    google.protobuf.Timestamp CreatedAt  = 9   ; //   
    google.protobuf.Timestamp UpdatedAt  = 10  ; //   
}